--- a/public/index.html
+++ b/public/index.html
@@ -22,24 +22,24 @@
     -->
 
     <!-- HTML Meta Tags -->
-    <title>Wedding Sandi & May</title>
+    <title>Nurani Invitation</title>
     <meta name="description" content="Assalamualaikum Wr Wb Maha suci Allah SWT yang telah menciptakan makhluk-Nya berpasang-pasangan. Tanpa mengurangi rasa hormat, dengan ini kami bermaksud mengundang Bapak/Ibu/Saudara/i untuk hadir pada acara pernikahan kami." />
 
     <!-- Google / Search Engine Tags -->
-    <meta itemprop="name" content="Wedding Sandi & May" />
+    <meta itemprop="name" content="Nurani Invitation" />
     <meta itemprop="description" content="Assalamualaikum Wr Wb Maha suci Allah SWT yang telah menciptakan makhluk-Nya berpasang-pasangan. Tanpa mengurangi rasa hormat, dengan ini kami bermaksud mengundang Bapak/Ibu/Saudara/i untuk hadir pada acara pernikahan kami." />
     <meta itemprop="image" content="%PUBLIC_URL%/thumnail3.jpg" />
 
     <!-- Facebook Meta Tags -->
     <meta property="og:url" content="https://wedding-sandi-netlify.app" />
     <meta property="og:type" content="website" />
-    <meta property="og:title" content="Wedding Sandi & May" />
+    <meta property="og:title" content="Nurani Invitation" />
     <meta property="og:description" content="Assalamualaikum Wr Wb Maha suci Allah SWT yang telah menciptakan makhluk-Nya berpasang-pasangan. Tanpa mengurangi rasa hormat, dengan ini kami bermaksud mengundang Bapak/Ibu/Saudara/i untuk hadir pada acara pernikahan kami." />
     <meta property="og:image" content="%PUBLIC_URL%/thumnail3.jpg" />
 
     <!-- Twitter Meta Tags -->
     <meta name="twitter:card" content="summary_large_image" />
-    <meta name="twitter:title" content="Wedding Sandi & May" />
+    <meta name="twitter:title" content="Nurani Invitation" />
     <meta name="twitter:description" content="Assalamualaikum Wr Wb Maha suci Allah SWT yang telah menciptakan makhluk-Nya berpasang-pasangan. Tanpa mengurangi rasa hormat, dengan ini kami bermaksud mengundang Bapak/Ibu/Saudara/i untuk hadir pada acara pernikahan kami." />
     <meta name="twitter:image" content="%PUBLIC_URL%/thumnail3.png" />
 
