--- a/public/index.html
+++ b/public/index.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8" />
     <link rel="icon" href="%PUBLIC_URL%/logo.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <meta name="theme-color" content="#dfc4a7" />
+    <meta name="theme-color" content="#ffffff" />
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo.png" />
     <!--
       manifest.json provides metadata used when your web app is installed on a
@@ -22,26 +22,26 @@
     -->
 
     <!-- HTML Meta Tags -->
-    <title>Nurani Invitation</title>
+    <title>Asmaraloka</title>
     <meta name="description" content="Assalamualaikum Wr Wb Maha suci Allah SWT yang telah menciptakan makhluk-Nya berpasang-pasangan. Tanpa mengurangi rasa hormat, dengan ini kami bermaksud mengundang Bapak/Ibu/Saudara/i untuk hadir pada acara pernikahan kami." />
 
     <!-- Google / Search Engine Tags -->
-    <meta itemprop="name" content="Nurani Invitation" />
+    <meta itemprop="name" content="Asmaraloka" />
     <meta itemprop="description" content="Assalamualaikum Wr Wb Maha suci Allah SWT yang telah menciptakan makhluk-Nya berpasang-pasangan. Tanpa mengurangi rasa hormat, dengan ini kami bermaksud mengundang Bapak/Ibu/Saudara/i untuk hadir pada acara pernikahan kami." />
-    <meta itemprop="image" content="%PUBLIC_URL%/thumnail3.jpg" />
+    <!-- <meta itemprop="image" content="%PUBLIC_URL%/thumnail3.jpg" /> -->
 
     <!-- Facebook Meta Tags -->
-    <meta property="og:url" content="https://wedding-sandi-netlify.app" />
+    <meta property="og:url" content="" />
     <meta property="og:type" content="website" />
-    <meta property="og:title" content="Nurani Invitation" />
+    <meta property="og:title" content="Asmaraloka" />
     <meta property="og:description" content="Assalamualaikum Wr Wb Maha suci Allah SWT yang telah menciptakan makhluk-Nya berpasang-pasangan. Tanpa mengurangi rasa hormat, dengan ini kami bermaksud mengundang Bapak/Ibu/Saudara/i untuk hadir pada acara pernikahan kami." />
-    <meta property="og:image" content="%PUBLIC_URL%/thumnail3.jpg" />
+    <!-- <meta property="og:image" content="%PUBLIC_URL%/thumnail3.jpg" /> -->
 
     <!-- Twitter Meta Tags -->
     <meta name="twitter:card" content="summary_large_image" />
-    <meta name="twitter:title" content="Nurani Invitation" />
+    <meta name="twitter:title" content="Asmaraloka" />
     <meta name="twitter:description" content="Assalamualaikum Wr Wb Maha suci Allah SWT yang telah menciptakan makhluk-Nya berpasang-pasangan. Tanpa mengurangi rasa hormat, dengan ini kami bermaksud mengundang Bapak/Ibu/Saudara/i untuk hadir pada acara pernikahan kami." />
-    <meta name="twitter:image" content="%PUBLIC_URL%/thumnail3.png" />
+    <!-- <meta name="twitter:image" content="%PUBLIC_URL%/thumnail3.png" /> -->
 
     <!-- Meta Tags Generated via http://heymeta.com -->
 
